import a course description into the DB

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "fb36bd96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "8c9b341f",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "79f9b011",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +380,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3895bed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +406,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "664d327d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +415,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afe43d6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +430,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "197e24bd",
    "metadata": {
     "scrolled": true
    },
@@ -468,7 +461,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "581cab0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +471,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b612613a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +481,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fc6532c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
