--- a/XML import.ipynb
+++ b/XML import.ipynb
@@ -2,79 +2,125 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from xml.dom import minidom\n",
     "import xml.etree.ElementTree as ET"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mydoc = minidom.parse('2022-05-10_FOKUS_AWT_CompetencyExtraction_WB_Brandenburg.xml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "items = mydoc.getElementsByTagName('COURSE')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16852\n"
+      "<Element 'COURSE' at 0x7f8461f7ad60>\n"
      ]
     }
    ],
    "source": [
-    "print(len(items))"
+    "tree = ET.parse('data/course-description/FOKUS_AWT_CompetencyExtraction_WB_Brandenburg.xml')\n",
+    "all_name_elements = tree.findall('.//COURSE')\n",
+    "print(all_name_elements[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = ET.parse('2022-05-10_FOKUS_AWT_CompetencyExtraction_WB_Brandenburg.xml')\n",
-    "root = tree.getroot()"
+    "name = courses[0].find('CS_NAME') \n",
+    "id = courses[0].find('CS_ID') \n",
+    "description = courses[0].find('CS_DESC_LONG') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Item #2 data:\n",
-      "\n",
-      "    \n"
+      "<COURSE><CS_NAME>\"Schwierige\" Klienten? - Mit Patienten, Angehï¿œrigen und Kollegen clever kommunizieren </CS_NAME>\n",
+      "      <CS_ID>4A873264-7ADD-DE47-3039-1FDA692E8164</CS_ID>\n",
+      "      <CS_DESC_LONG>- Analyse strapaziï¿œser Gesprï¿œchsmuster\n",
+      "- Schwierige Klienten oder schwierige Situation?\n",
+      "- Was heiï¿œt es schwierige Gesprï¿œche souverï¿œn zu meistern?\n",
+      "- ï¿œbungen mit Videofeedback werden durchgefï¿œhrt!     </CS_DESC_LONG>\n",
+      "      </COURSE>\n"
      ]
     }
    ],
    "source": [
-    "print('\\nItem #2 data:')\n",
-    "print(root[0][1].text)"
+    "root = ET.Element(\"COURSE\")\n",
+    "root.append (name)\n",
+    "root.append (id)\n",
+    "root.append (description)\n",
+    "\n",
+    "r = ET.tostring(root, encoding='unicode')\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_new = ET.ElementTree(root)\n",
+    "tree_new.write('course.xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<COURSE><CS_NAME>\"Schwierige\" Klienten? - Mit Patienten, Angehï¿œrigen und Kollegen clever kommunizieren </CS_NAME>\n",
+      "      <CS_ID>4A873264-7ADD-DE47-3039-1FDA692E8164</CS_ID>\n",
+      "      <CS_DESC_LONG>- Analyse strapaziï¿œser Gesprï¿œchsmuster\n",
+      "- Schwierige Klienten oder schwierige Situation?\n",
+      "- Was heiï¿œt es schwierige Gesprï¿œche souverï¿œn zu meistern?\n",
+      "- ï¿œbungen mit Videofeedback werden durchgefï¿œhrt!     </CS_DESC_LONG>\n",
+      "      </COURSE>\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = ET.tostring(root, encoding='unicode')\n",
+    "print(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "xml.etree.ElementTree.ElementTree"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(tree)"
    ]
   },
   {
@@ -87,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
