--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
+   "id": "34f704ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
+   "id": "95b287d7",
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
+   "id": "2fd4f913",
    "metadata": {},
    "outputs": [
     {
@@ -380,6 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "91eafb65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,6 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "256c69e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,6 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1286455b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,6 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "480b9d45",
    "metadata": {
     "scrolled": true
    },
@@ -461,6 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dcbff2f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,6 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "038360e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,6 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d6b91fa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,11 +530,87 @@
     "#         elif phraseFound: return fp, n\n",
     "#     return ([],n)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "597e914c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install spacy\n",
+    "# python -m spacy download de_core_news_lg\n",
+    "import pandas as pd\n",
+    "import spacy\n",
+    "\n",
+    "sp = spacy.load('de_core_news_lg')\n",
+    "skills = pd.read_csv('./data/competencies/skills_de.csv')\n",
+    "skill_labels = skills['preferredLabel'].copy(deep=True)\n",
+    "termStore = {} \n",
+    "sequenceStore = {}\n",
+    "URI = 0\n",
+    "\n",
+    "for i,sequence in enumerate(skill_labels):\n",
+    "    sequence = sp(sequence)\n",
+    "    label = ''\n",
+    "    for term in sequence:\n",
+    "        if not term.is_stop:\n",
+    "            term = term.lemma_\n",
+    "            term = term.lower()\n",
+    "            if term != '--':\n",
+    "                if term[0] == '-': term = term[1:]\n",
+    "                if term == '\\xa0': continue\n",
+    "                label += term + ' '\n",
+    "                if termStore.get(term) == None: \n",
+    "                    termStore[term] = URI\n",
+    "                    URI += 1\n",
+    "        skill_labels[i] = label[:-1]\n",
+    "\n",
+    "for i,sequence in enumerate(skill_labels):\n",
+    "    URI = []\n",
+    "    sequence = sp(sequence)\n",
+    "    for term in sequence:\n",
+    "        URI.append(termStore[str(term)])\n",
+    "    sequenceStore[tuple(URI)] = (i,str(sequence))\n",
+    "\n",
+    "course_descriptions = pd.read_xml('./data/course-description/example.xml')['CS_DESC_LONG']\n",
+    "text = sp(course_descriptions[1])\n",
+    "\n",
+    "sequence = []\n",
+    "results = []\n",
+    "\n",
+    "for term in text:\n",
+    "    term = term.lemma_.lower()\n",
+    "    if term in termStore:\n",
+    "        sequence.append(termStore[term])\n",
+    "    else:\n",
+    "        if sequence != []:\n",
+    "            URI = []\n",
+    "            for i in sequence:\n",
+    "                URI.append(i)\n",
+    "                if tuple(URI) in sequenceStore: \n",
+    "                    result = sequenceStore[tuple(URI)]\n",
+    "                else: break\n",
+    "            if result: results.append(result)\n",
+    "            result = None\n",
+    "        sequence = []\n",
+    "\n",
+    "for result in results:\n",
+    "    print(skills.loc[result[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e606399",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
