create CSVs for import into DB

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "id": "34f704ec",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "id": "95b287d7",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "id": "2fd4f913",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "[13891 rows x 13 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "91eafb65",
    "metadata": {},
    "outputs": [],
@@ -409,17 +409,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "256c69e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'musikpersonal verwalten'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "skill_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1286455b",
    "metadata": {},
    "outputs": [],
@@ -436,11 +447,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "636ef1b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "480b9d45",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(464, 'arbeitsrecht')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "course_descriptions = pd.read_xml('./data/course-description/example.xml')['CS_DESC_LONG']\n",
     "text = sp(course_descriptions[1])\n",
@@ -467,10 +497,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dcbff2f5",
+   "execution_count": 16,
+   "id": "a0adc1b2",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "courses = pd.read_csv('all_courses1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "008b8a14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16852"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(courses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f82b2c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Deutsch als Zweitsprache - Grundstufe 1 (A2.1)', 'Arbeitsrecht'],\n",
+       " ['GmbH Geschäftsführung (IHK) - Live-Online-Lehrgang', 'Risikomanagement'],\n",
+       " ['Englisch-Startstufe 2 (A1.2) ', 'Datenschutz'],\n",
+       " ['Tom Kitwood - der personenzentrierte Ansatz im Umgang mit an Demenz erkrankten alten Menschen',\n",
+       "  'planen'],\n",
+       " ['Zertifizierter Prozessmanager / DGP', 'sich selbst darstellen'],\n",
+       " ['Geprüfte Fachkraft zur Arbeits- und Berufsförderung (gFAB)',\n",
+       "  'Betten machen'],\n",
+       " ['\"Die Trauer beginnt schon vor dem Tod\". Ein Workshop zum Umgang mit Trauer.',\n",
+       "  'Ernährung'],\n",
+       " ['Vertragsrecht - Modul 3 (Arbeitsmarktorientierte modulare Fortbildung Marketing und Vertrieb)',\n",
+       "  'Erste Hilfe'],\n",
+       " ['PMBC-Nachschulung für KMB-Scheininhaber', 'Dritte evaluieren'],\n",
+       " ['Wolfram-Inertgasschweißen WIG3 St oder CrNi DVS-IIW/ EWF 1111',\n",
+       "  'Kommunikation'],\n",
+       " ['Vertragsrecht - Modul 3 (Arbeitsmarktorientierte modulare Fortbildung Marketing und Vertrieb)',\n",
+       "  'Erste Hilfe'],\n",
+       " ['GmbH Geschäftsführung (IHK) - Live-Online-Lehrgang', 'Risikomanagement'],\n",
+       " ['Erfolgreiche Integration von neuen Mitarbeitern ', 'Beratung'],\n",
+       " ['Manuelle Metallbearbeitung (Basis)', 'Parasitologie'],\n",
+       " ['Manuelle Metallbearbeitung (Basis)', 'Parasitologie'],\n",
+       " ['Berufspädagogik für Gesundheits- und Sozialberufe (B.A.)', 'Epidemiologie'],\n",
+       " ['Manuelle Metallbearbeitung (Basis)', 'Parasitologie'],\n",
+       " ['Erfolgreiche Integration von neuen Mitarbeitern ', 'Beratung'],\n",
+       " ['Metall-Schutzgasschweißen MAG 4 Stahl oder CrNi DVS-IIW/ EWF 1111',\n",
+       "  'Konfliktmanagement'],\n",
+       " ['Metall-Schutzgasschweißen MAG 4 Stahl oder CrNi DVS-IIW/ EWF 1111',\n",
+       "  'Konfliktmanagement'],\n",
+       " ['Digital fit - Individuelles Coaching', 'Anthropologie'],\n",
+       " ['Smartphone - Einsteiger - Aktiv', 'Ethik'],\n",
+       " ['Italienisch (B1)', 'Psychologie'],\n",
+       " ['Hatha-Yoga - Einführung für Teilnehmende mit ersten Vorkenntnissen',\n",
+       "  'Pädagogik'],\n",
+       " ['Excel - Expertenwissen Live-Online-Training', 'Soziologie'],\n",
+       " ['Pflegehelfer/in im ambulanten und stationären Bereich (Pflegerische Hilfskräfte) - erweiterter Basiskurs',\n",
+       "  'Logopädie'],\n",
+       " ['Hatha-Yoga - Einführung für Teilnehmende mit ersten Vorkenntnissen',\n",
+       "  'Pädagogik'],\n",
+       " ['Excel - Expertenwissen Live-Online-Training', 'Soziologie'],\n",
+       " ['Italienisch (B1)', 'Psychologie'],\n",
+       " ['Gesund und gut leben - in leichter Sprache  A72', 'Pathologie'],\n",
+       " ['Anerkannte Weiterbildung gem. § 7 Pflanzenschutzgesetz', 'Audiologie'],\n",
+       " ['Personalmanagement inklusive Trainerausbildung / AEVO', 'Neurologie'],\n",
+       " ['Buchhaltung mit Lexware und DATEV pro', 'Kieferorthopädie'],\n",
+       " ['Pflegehelfer/in im ambulanten und stationären Bereich (Pflegerische Hilfskräfte) - erweiterter Basiskurs',\n",
+       "  'Logopädie'],\n",
+       " ['Deutschkurse', 'Ernährung'],\n",
+       " ['Wolfram-Inertgasschweißen WIG3 St oder CrNi DVS-IIW/ EWF 1111',\n",
+       "  'Kommunikation'],\n",
+       " ['Wolfram-Inertgasschweißen WIG3 St oder CrNi DVS-IIW/ EWF 1111',\n",
+       "  'Kommunikation'],\n",
+       " ['Körpersprache und Rhetorik für Führungskräfte', 'Reflexion'],\n",
+       " ['Wolfram-Inertgasschweißen WIG3 St oder CrNi DVS-IIW/ EWF 1111',\n",
+       "  'Kommunikation'],\n",
+       " ['Wolfram-Inertgasschweißen WIG3 St oder CrNi DVS-IIW/ EWF 1111',\n",
+       "  'Kommunikation'],\n",
+       " ['Erfolgreiche Integration von neuen Mitarbeitern ', 'Beratung'],\n",
+       " ['Körpersprache und Rhetorik für Führungskräfte', 'Reflexion'],\n",
+       " ['Italienisch (B1)', 'Psychologie'],\n",
+       " ['Italienisch (B1)', 'Psychologie'],\n",
+       " ['Docker - Einführung Live-Online-Training', 'Strafrecht']]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = sp(courses['couse_description'][1])\n",
+    "\n",
+    "sequence = []\n",
+    "results = []\n",
+    "relationship = []\n",
+    "#for i in range(0,len(courses)):\n",
+    "for i in range(0,40):\n",
+    "    for term in sp(courses['couse_description'][i]):\n",
+    "        term = term.lemma_.lower()\n",
+    "        if term in termStore:\n",
+    "            sequence.append(termStore[term])\n",
+    "        else:\n",
+    "            if sequence != []:\n",
+    "                URI = []\n",
+    "                for i in sequence:\n",
+    "                    URI.append(i)\n",
+    "                    if tuple(URI) in sequenceStore: \n",
+    "                        result = sequenceStore[tuple(URI)]\n",
+    "                    else: break\n",
+    "                if result: \n",
+    "                    results.append([courses['course_name'][i],skills['preferredLabel'][result[0]]])\n",
+    "                    relationship.append((skills['conceptUri'][result[0]],courses['course_id'][i]))\n",
+    "                result = None\n",
+    "            sequence = []\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "467789c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('http://data.europa.eu/esco/skill/08fe5910-8c4c-4679-a988-eb2ded3c4909',\n",
+       "  'A042158D-A149-950E-930B-54DAA1F0148D'),\n",
+       " ('http://data.europa.eu/esco/skill/6eff134b-e34f-4d6e-a6e8-5e47cf2228d0',\n",
+       "  '97FBC8FD-BBC2-2F06-514E-135E275504A3'),\n",
+       " ('http://data.europa.eu/esco/skill/a4346013-a967-4a58-a533-6b32ad1364c5',\n",
+       "  'A04188BC-436C-CA79-28FE-6D995C511E38'),\n",
+       " ('http://data.europa.eu/esco/skill/e49f4158-9d4c-425d-bf32-dfe89b19840a',\n",
+       "  '6E51BC89-9082-29A2-5D66-833C1015A239'),\n",
+       " ('http://data.europa.eu/esco/skill/68c27e3e-a3f7-4f76-856a-761d65364199',\n",
+       "  '9F943268-FFE9-96E1-CCDC-3AA4706BD696'),\n",
+       " ('http://data.europa.eu/esco/skill/e0c6fdd1-336a-4e2f-91d1-ab4a2f9c385d',\n",
+       "  '6F175235-68E8-8228-B80A-7619CEB1DE7C'),\n",
+       " ('http://data.europa.eu/esco/skill/13d96098-2ff0-46b8-b326-b7c0e18cc1f1',\n",
+       "  'A016432D-DC92-2361-A7DE-89E1C63F1F46'),\n",
+       " ('http://data.europa.eu/esco/skill/f7464f30-662b-4177-85a0-3df9693e9e58',\n",
+       "  '86DAAC1C-26B8-851F-69D1-8D82C33E2254'),\n",
+       " ('http://data.europa.eu/esco/skill/a90fa5ff-5b4f-4152-8160-ad80a6d3d13e',\n",
+       "  '8C103152-672A-A011-4E89-BC3AA39ABBD1'),\n",
+       " ('http://data.europa.eu/esco/skill/15d76317-c71a-4fa2-aadc-2ecc34e627b7',\n",
+       "  '2B72A32E-133C-C357-3421-2F2F6E25DA96'),\n",
+       " ('http://data.europa.eu/esco/skill/f7464f30-662b-4177-85a0-3df9693e9e58',\n",
+       "  '86DAAC1C-26B8-851F-69D1-8D82C33E2254')]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relationship"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1aff0bf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Analyse strapaziöser Gesprächsmuster. Schwierige Klienten oder schwierige Situation. Was heißt es schwierige Gespräche souverän zu meistern. Übungen mit Videofeedback werden durchgeführt'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course_descriptions[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dcbff2f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conceptType                                KnowledgeSkillCompetence\n",
+      "conceptUri        http://data.europa.eu/esco/skill/08fe5910-8c4c...\n",
+      "skillType                                                 knowledge\n",
+      "reuseLevel                                             cross-sector\n",
+      "preferredLabel                                         Arbeitsrecht\n",
+      "altLabels                                       Arbeitsgesetzgebung\n",
+      "hiddenLabels                                                    NaN\n",
+      "status                                                     released\n",
+      "modifiedDate                                   2016-12-20T17:44:36Z\n",
+      "scopeNote                                                       NaN\n",
+      "definition                                                      NaN\n",
+      "inScheme          http://data.europa.eu/esco/concept-scheme/skil...\n",
+      "description       Rechtsvorschriften auf nationaler oder interna...\n",
+      "Name: 464, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "for result in results:\n",
     "    print(skills.loc[result[0]])"
@@ -624,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
