--- a/src/NLP.ipynb
+++ b/src/NLP.ipynb
@@ -1402,11 +1402,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 378,
    "id": "eb5548b3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Der Fluss von elektrischer Ladung durch Elektronen oder Ionen in einem Medium wie einem Elektrolyten oder einem Plasma.'"
+      ]
+     },
+     "execution_count": 378,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course_descriptions[4796]"
+   ]
   },
   {
    "cell_type": "code",
