--- a/src/NLP.ipynb
+++ b/src/NLP.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "skills = pd.read_csv('./data/competencies/skills_de.csv')[['conceptUri','preferredLabel','description']]"
+    "skills = pd.read_csv('./data/skills_de.csv')[['conceptUri','preferredLabel','description']]"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "courses = pd.read_csv('./data/course-description/all_courses1.csv')"
+    "courses = pd.read_csv('./data/all_courses1.csv')"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# labels.to_csv(\"./data/competencies/skillLabels.csv\")\n",
+    "# labels.to_csv(\"./data/skillLabels.csv\")\n",
     "labels = skills['preferredLabel'].copy(deep=True)"
    ]
   },
