create swagger interface and endpoints

--- a/src/Neo4J.ipynb
+++ b/src/Neo4J.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d9d5b50a",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f6a483a9",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1288af5a",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "c7e488b2",
    "metadata": {},
    "outputs": [],
@@ -190,23 +190,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "id": "3543a20b",
    "metadata": {},
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # Aura queries use an encrypted connection using the \"neo4j+s\" URI scheme\n",
-    "    uri = \"neo4j+s://fbb398e7.databases.neo4j.io\"\n",
+    "    #uri = \"neo4j+s://fbb398e7.databases.neo4j.io\"\n",
+    "    uri = \"neo4j+s://3f32e422.databases.neo4j.io\"\n",
     "    user = \"neo4j\"\n",
-    "    password = \"3bO4Zwc9eYOyZBQ_CHE49lqd7NKeLSySJAq4flxUtAA\"\n",
+    "    #password = \"3bO4Zwc9eYOyZBQ_CHE49lqd7NKeLSySJAq4flxUtAA\"\n",
+    "    password = \"Xm3_uLclyVQspJgpSoMKmYONcOIFPZx7WKVrTbiU_ms\"\n",
     "    app = App(uri, user, password)\n",
-    "#     app.create_skills(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_skills.csv\")\n",
-    "#     app.create_courses(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_courses.csv\")\n",
-    "    app.create_relations(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_relations.csv\")\n",
-    "#     app.create_relation(\"99BEDCEB-4FF3-3F8F-88B7-B30E50638F01\",\"http://data.europa.eu/esco/skill/08fe5910-8c4c-4679-a988-eb2ded3c4909\")\n",
-    "#     app.read_skills(\"97FD41FD-1A91-179C-3EA5-6A23E2F436D5\")\n",
-    "    app.close()"
+    "    app.create_skills(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_skills.csv\")\n",
+    "    app.create_courses(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_courses.csv\")\n",
+    "    #app.create_relations(\"https://raw.githubusercontent.com/ingastrelnikova/awt-pj-ss22-learn-tech-2/main/data/all_relations.csv\")\n",
+    "    app.create_relation(\"97FD41FD-1A91-179C-3EA5-6A23E2F436D5\",\"http://data.europa.eu/esco/skill/08fe5910-8c4c-4679-a988-eb2ded3c4909\")\n",
+    "    #print(app.read_skills(\"97FD41FD-1A91-179C-3EA5-6A23E2F436D5\"))\n",
+    "    app.close()\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -265,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
