--- a/src/Preprocessing.ipynb
+++ b/src/Preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 14,
    "id": "d5fbc994",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 15,
    "id": "8e7ac244",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "[13891 rows x 3 columns]"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 16,
    "id": "67f2ae43",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "[16852 rows x 3 columns]"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 17,
    "id": "cdfb6855",
    "metadata": {},
    "outputs": [],
@@ -375,15 +375,10 @@
     "        sentence = sp(sentence)\n",
     "        sentence_processed = ''\n",
     "        for word in sentence:\n",
-    "            if \"/\" in word.text:\n",
-    "                temp = word.text.replace('/','')\n",
-    "                if len(temp) != 0: word = sp(temp)[0]\n",
-    "            if \"/-\" in word.text: \n",
-    "                temp = word.text.replace('/-','')\n",
-    "                if len(temp) != 0: word = sp(temp)[0]\n",
-    "            if \"-\" in word.text: \n",
-    "                temp = word.text.replace('-','')\n",
-    "                if len(temp) != 0: word = sp(temp)[0]\n",
+    "            for punctuation in ['/', \"/-\", \"-\"]:\n",
+    "                if punctuation in word.text:\n",
+    "                    temp = word.text.replace(punctuation,'')\n",
+    "                    if len(temp) != 0: word = sp(temp)[0]\n",
     "            if not word.is_stop and not word.is_digit:\n",
     "                #and re.match('^[äöüÄÖÜßA-Za-z0-9_-]*$', word.text):\n",
     "                word = word.lemma_.lower()\n",
@@ -410,17 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 18,
    "id": "34a92df9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_processed = processe(skills['preferredLabel'])"
+    "labels_processed = processe(skills['preferred_label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 19,
    "id": "dae3a3a9",
    "metadata": {},
    "outputs": [
@@ -445,7 +440,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>processedLabel</th>\n",
+       "      <th>preferred_label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -499,7 +494,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                          processedLabel\n",
+       "                                         preferred_label\n",
        "0                                musikpersonal verwalten\n",
        "1                    strafvollzugsverfahr beaufsichtigen\n",
        "2                         unterdrückend praktik anwenden\n",
@@ -515,13 +510,13 @@
        "[13891 rows x 1 columns]"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_labels_processed = pd.DataFrame(labels_processed, columns = ['processedLabel'])\n",
+    "df_labels_processed = pd.DataFrame(labels_processed, columns = ['preferred_label'])\n",
     "df_labels_processed.to_csv(\"../data/labels_processed.csv\")\n",
     "df_labels_processed"
    ]
@@ -537,17 +532,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 20,
    "id": "3ea90a33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "skills['skill_info'] = skills['preferredLabel'] + ' ' + skills['description']"
+    "skills['skill_info'] = skills['preferred_label'] + ' ' + skills['description']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 21,
    "id": "3da39bd3",
    "metadata": {},
    "outputs": [],
@@ -557,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 22,
    "id": "d6aef8ab",
    "metadata": {},
    "outputs": [
@@ -652,7 +647,7 @@
        "[13891 rows x 1 columns]"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 23,
    "id": "e51760fc",
    "metadata": {},
    "outputs": [],
@@ -692,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 24,
    "id": "4fb71728",
    "metadata": {},
    "outputs": [],
@@ -702,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 25,
    "id": "904255be",
    "metadata": {},
    "outputs": [
@@ -797,7 +792,7 @@
        "[16852 rows x 1 columns]"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,14 +802,6 @@
     "df_courses_info_processed.to_csv(\"../data/courses_info_processed.csv\")\n",
     "df_courses_info_processed"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dfb9185",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
