--- a/src/Preprocessing.ipynb
+++ b/src/Preprocessing.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "d5fbc994",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-11 22:11:09.480432: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-07-11 22:11:09.480546: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import spacy\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "8e7ac244",
    "metadata": {},
    "outputs": [
@@ -176,7 +185,7 @@
        "[13891 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "67f2ae43",
    "metadata": {},
    "outputs": [
@@ -343,7 +352,7 @@
        "[16852 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "cdfb6855",
    "metadata": {},
    "outputs": [],
@@ -405,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "34a92df9",
    "metadata": {},
    "outputs": [],
@@ -415,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "dae3a3a9",
    "metadata": {},
    "outputs": [
@@ -440,7 +449,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>preferred_label</th>\n",
+       "      <th>processed_label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -494,7 +503,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         preferred_label\n",
+       "                                         processed_label\n",
        "0                                musikpersonal verwalten\n",
        "1                    strafvollzugsverfahr beaufsichtigen\n",
        "2                         unterdrückend praktik anwenden\n",
@@ -510,13 +519,13 @@
        "[13891 rows x 1 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_labels_processed = pd.DataFrame(labels_processed, columns = ['preferred_label'])\n",
+    "df_labels_processed = pd.DataFrame(labels_processed, columns = ['processed_label'])\n",
     "df_labels_processed.to_csv(\"../data/labels_processed.csv\")\n",
     "df_labels_processed"
    ]
