Real Final Update

--- a/src/NLP.ipynb
+++ b/src/NLP.ipynb
@@ -18,18 +18,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
-   "id": "2e84da09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pip install spacy\n",
-    "# python -m spacy download de_core_news_lg\n",
-    "# pip install spacy-universal-sentence-encoder"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 381,
    "id": "34f704ec",
    "metadata": {},
@@ -633,7 +621,7 @@
    "outputs": [],
    "source": [
     "skill_info_embedings = []\n",
-    "batch_size = 1000\n",
+    "batch_size = 500\n",
     "for i in range(0, len(skills_info), batch_size):\n",
     "    skill_info_embedings.extend(embed(skills_info[i: i + batch_size]))\n",
     "skill_info_embedings = np.array(skill_info_embedings)"
@@ -794,7 +782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start, end = 0, len(courses_info)"
+    "start, end = 0, len(courses_info_ER)"
    ]
   },
   {
