--- a/src/Preprocessing.ipynb
+++ b/src/Preprocessing.ipynb
@@ -140,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import_course('../data/2022-05-10_FOKUS_AWT_CompetencyExtraction_WB_Brandenburg_re-encoded.xml')\n",
-    "# import_course('../data/2022-05-10_FOKUS_AWT_CompetencyExtraction_WB_Brandenburg_control_re-encoded.xml')"
+    "# import_course('../data/2022-05-10_FOKUS_AWT_CompetencyExtraction_WB_Brandenburg_re-encoded.xml')\n",
+    "import_course('../data/2022-05-10_FOKUS_AWT_CompetencyExtraction_WB_Brandenburg_control_re-encoded.xml')"
    ]
   },
   {
@@ -599,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "skills['info'] = skills['preferred_label'] + ', ' + skills['description']"
+    "skills['info'] = skills['preferred_label'] + '. ' + skills['description']"
    ]
   },
   {
